# EMPyRIC

./: pyproject.toml  setup.py
docs/: README.md
empyric/: cli.py  io.py  storage.py  utils.py
empyric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_storage.py
